-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.9.0 Beta3
-
None
-
-
e8aa9ff63 (dev), b3a550d97 (6.9), 2545282c7 (tqtc/lts-6.8), 25d90b311 (tqtc/lts-6.5)
-
2025wk10s1QtforAndroid, 2025wk12s1QtforAndroid, 2025wk14s1QtforAndroid, 2025wk16s1QtforAndroid
MacOS 15.3.1
Qt Creator 15.0.1
Qt 6.9.0b3
Device: Samsung Galaxy S22 14.0, Pixel 3a 13.0
Steps to reproduce:
- Run example - https://doc.qt.io/qt-6/qtbluetooth-heartrate-game-example.html or https://doc.qt.io/qt-6/qtpositioning-weatherinfo-example.html
Expected: The app should work after the launch
Actual: The app crashes when the permission request appears on launch.
Reproducibility: 100%
F/DEBUG : *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** F/DEBUG : Build fingerprint: 'google/redfin/redfin:13/TQ3A.230901.001/10750268:user/release-keys' F/DEBUG : Revision: 'MP1.0' F/DEBUG : ABI: 'arm64' F/DEBUG : Timestamp: 2025-02-18 17:45:16.665427622+0100 F/DEBUG : Process uptime: 2s F/DEBUG : Cmdline: org.qtproject.example.heartrate_game F/DEBUG : pid: 9505, tid: 9535, name: qtMainLoopThrea >>> org.qtproject.example.heartrate_game <<< F/DEBUG : uid: 11459 F/DEBUG : signal 6 (SIGABRT), code -1 (SI_QUEUE), fault addr -------- F/DEBUG : Abort message: 'Failed to initialize graphics backend for OpenGL.' F/DEBUG : x0 0000000000000000 x1 000000000000253f x2 0000000000000006 x3 0000006e130a0830 F/DEBUG : x4 60611f726268676f x5 60611f726268676f x6 60611f726268676f x7 7f7f7f7f7f7f7f7f F/DEBUG : x8 00000000000000f0 x9 00000070bb93ea00 x10 0000000000000001 x11 00000070bb97cde4 F/DEBUG : x12 0000000000002a40 x13 0000000000000033 x14 0000006e1309f140 x15 00000070bb94267a F/DEBUG : x16 00000070bb9e1d58 x17 00000070bb9bec70 x18 0000006da1ad2000 x19 0000000000002521 F/DEBUG : x20 000000000000253f x21 00000000ffffffff x22 b400006e9e16c5c0 x23 0000006d9edf3000 F/DEBUG : x24 0000006e130a3000 x25 b400006e2e12fb50 x26 b400006ece12b350 x27 b400006f1e21deb0 F/DEBUG : x28 b400006e2e132490 x29 0000006e130a08b0 F/DEBUG : lr 00000070bb96e968 sp 0000006e130a0810 pc 00000070bb96e994 pst 0000000000000000 F/DEBUG : backtrace: F/DEBUG : #00 pc 0000000000051994 /apex/com.android.runtime/lib64/bionic/libc.so (abort+164) (BuildId: 4e07915368c859b1910c68c84a8de75f) F/DEBUG : #01 pc 00000000002ffe60 /data/app/~~-GRhwGB9YEWRWjJ5CYrY3w==/org.qtproject.example.heartrate_game-j6-JBYjFL9pw97qGmC379g==/base.apk!libQt6Core_arm64-v8a.so (offset 0x598000) (BuildId: 97a9b07af7b22fe47ecfa16767ca916299fc1c74) F/DEBUG : #02 pc 0000000000315a30 /data/app/~~-GRhwGB9YEWRWjJ5CYrY3w==/org.qtproject.example.heartrate_game-j6-JBYjFL9pw97qGmC379g==/base.apk!libQt6Core_arm64-v8a.so (offset 0x598000) (BuildId: 97a9b07af7b22fe47ecfa16767ca916299fc1c74) F/DEBUG : #03 pc 0000000000316304 /data/app/~~-GRhwGB9YEWRWjJ5CYrY3w==/org.qtproject.example.heartrate_game-j6-JBYjFL9pw97qGmC379g==/base.apk!libQt6Core_arm64-v8a.so (offset 0x598000) (QMessageLogger::fatal(char const*, ...) const+156) (BuildId: 97a9b07af7b22fe47ecfa16767ca916299fc1c74) F/DEBUG : #04 pc 00000000004ccd54 /data/app/~~-GRhwGB9YEWRWjJ5CYrY3w==/org.qtproject.example.heartrate_game-j6-JBYjFL9pw97qGmC379g==/base.apk!libQt6Quick_arm64-v8a.so (offset 0x2074000) (QSGRenderLoop::handleContextCreationFailure(QQuickWindow*)+364) (BuildId: 1988b7d0a5e047a79933c4a2124e26b051dd74e1) F/DEBUG : #05 pc 0000000000461674 /data/app/~~-GRhwGB9YEWRWjJ5CYrY3w==/org.qtproject.example.heartrate_game-j6-JBYjFL9pw97qGmC379g==/base.apk!libQt6Quick_arm64-v8a.so (offset 0x2074000) (QQuickWindow::event(QEvent*)+2800) (BuildId: 1988b7d0a5e047a79933c4a2124e26b051dd74e1) F/DEBUG : #06 pc 000000000046dcf4 /data/app/~~-GRhwGB9YEWRWjJ5CYrY3w==/org.qtproject.example.heartrate_game-j6-JBYjFL9pw97qGmC379g==/base.apk!libQt6Quick_arm64-v8a.so (offset 0x2074000) (QQuickWindowQmlImpl::event(QEvent*)+228) (BuildId: 1988b7d0a5e047a79933c4a2124e26b051dd74e1) F/DEBUG : #07 pc 0000000000369da0 /data/app/~~-GRhwGB9YEWRWjJ5CYrY3w==/org.qtproject.example.heartrate_game-j6-JBYjFL9pw97qGmC379g==/base.apk!libQt6Core_arm64-v8a.so (offset 0x598000) (QCoreApplication::notifyInternal2(QObject*, QEvent*)+160) (BuildId: 97a9b07af7b22fe47ecfa16767ca916299fc1c74) F/DEBUG : #08 pc 000000000036aa7c /data/app/~~-GRhwGB9YEWRWjJ5CYrY3w==/org.qtproject.example.heartrate_game-j6-JBYjFL9pw97qGmC379g==/base.apk!libQt6Core_arm64-v8a.so (offset 0x598000) (QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*)+448) (BuildId: 97a9b07af7b22fe47ecfa16767ca916299fc1c74) F/DEBUG : #09 pc 000000000047c8e0 /data/app/~~-GRhwGB9YEWRWjJ5CYrY3w==/org.qtproject.example.heartrate_game-j6-JBYjFL9pw97qGmC379g==/base.apk!libQt6Core_arm64-v8a.so (offset 0x598000) (QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>)+76) (BuildId: 97a9b07af7b22fe47ecfa16767ca916299fc1c74) F/DEBUG : #10 pc 00000000006554f4 /data/app/~~-GRhwGB9YEWRWjJ5CYrY3w==/org.qtproject.example.heartrate_game-j6-JBYjFL9pw97qGmC379g==/base.apk!libQt6Gui_arm64-v8a.so (offset 0xb64000) (QUnixEventDispatcherQPA::processEvents(QFlags<QEventLoop::ProcessEventsFlag>)+20) (BuildId: 252e9c29422408f3f63c63f70cc6afc6b9dfdd44) F/DEBUG : #11 pc 000000000006b34c /data/app/~~-GRhwGB9YEWRWjJ5CYrY3w==/org.qtproject.example.heartrate_game-j6-JBYjFL9pw97qGmC379g==/base.apk (offset 0x2c80000) (BuildId: 055250d8c38b76767ffa956c99e3335fe32ead5e) F/DEBUG : #12 pc 0000000000371a14 /data/app/~~-GRhwGB9YEWRWjJ5CYrY3w==/org.qtproject.example.heartrate_game-j6-JBYjFL9pw97qGmC379g==/base.apk!libQt6Core_arm64-v8a.so (offset 0x598000) (QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>)+336) (BuildId: 97a9b07af7b22fe47ecfa16767ca916299fc1c74) F/DEBUG : #13 pc 000000000036a32c /data/app/~~-GRhwGB9YEWRWjJ5CYrY3w==/org.qtproject.example.heartrate_game-j6-JBYjFL9pw97qGmC379g==/base.apk!libQt6Core_arm64-v8a.so (offset 0x598000) (QCoreApplication::exec()+136) (BuildId: 97a9b07af7b22fe47ecfa16767ca916299fc1c74) F/DEBUG : #14 pc 00000000000b3f24 /data/app/~~-GRhwGB9YEWRWjJ5CYrY3w==/org.qtproject.example.heartrate_game-j6-JBYjFL9pw97qGmC379g==/base.apk (offset 0x29a4000) (main+1588) (BuildId: 8b39c3b3c7c793f98f8e54802696eade2504647d) F/DEBUG : #15 pc 0000000000061e94 /data/app/~~-GRhwGB9YEWRWjJ5CYrY3w==/org.qtproject.example.heartrate_game-j6-JBYjFL9pw97qGmC379g==/base.apk (offset 0x2c80000) (BuildId: 055250d8c38b76767ffa956c99e3335fe32ead5e) F/DEBUG : #16 pc 0000000000383d70 /apex/com.android.art/lib64/libart.so (art_quick_generic_jni_trampoline+144) (BuildId: c35c9ebf7bb06435e4b31977d87bd5d5) F/DEBUG : #17 pc 000000000036d840 /apex/com.android.art/lib64/libart.so (art_quick_invoke_static_stub+640) (BuildId: c35c9ebf7bb06435e4b31977d87bd5d5) F/DEBUG : #18 pc 0000000000366af8 /apex/com.android.art/lib64/libart.so (bool art::interpreter::DoCall<false>(art::ArtMethod*, art::Thread*, art::ShadowFrame&, art::Instruction const*, unsigned short, bool, art::JValue*)+2048) (BuildId: c35c9ebf7bb06435e4b31977d87bd5d5) F/DEBUG : #19 pc 000000000076e870 /apex/com.android.art/lib64/libart.so (void art::interpreter::ExecuteSwitchImplCpp<false>(art::interpreter::SwitchImplContext*)+12208) (BuildId: c35c9ebf7bb06435e4b31977d87bd5d5) F/DEBUG : #20 pc 00000000003863d8 /apex/com.android.art/lib64/libart.so (ExecuteSwitchImplAsm+8) (BuildId: c35c9ebf7bb06435e4b31977d87bd5d5) F/DEBUG : #21 pc 0000000000202610 /data/app/~~-GRhwGB9YEWRWjJ5CYrY3w==/org.qtproject.example.heartrate_game-j6-JBYjFL9pw97qGmC379g==/base.apk (org.qtproject.qt.android.QtNative$$ExternalSyntheticLambda4.run+0) F/DEBUG : #22 pc 0000000000358eec /apex/com.android.art/lib64/libart.so (art::interpreter::Execute(art::Thread*, art::CodeItemDataAccessor const&, art::ShadowFrame&, art::JValue, bool, bool) (.__uniq.112435418011751916792819755956732575238.llvm.17771861963221910393)+428) (BuildId: c35c9ebf7bb06435e4b31977d87bd5d5) F/DEBUG : #23 pc 0000000000367314 /apex/com.android.art/lib64/libart.so (bool art::interpreter::DoCall<false>(art::ArtMethod*, art::Thread*, art::ShadowFrame&, art::Instruction const*, unsigned short, bool, art::JValue*)+4124) (BuildId: c35c9ebf7bb06435e4b31977d87bd5d5) F/DEBUG : #24 pc 000000000076e870 /apex/com.android.art/lib64/libart.so (void art::interpreter::ExecuteSwitchImplCpp<false>(art::interpreter::SwitchImplContext*)+12208) (BuildId: c35c9ebf7bb06435e4b31977d87bd5d5) F/DEBUG : #25 pc 00000000003863d8 /apex/com.android.art/lib64/libart.so (ExecuteSwitchImplAsm+8) (BuildId: c35c9ebf7bb06435e4b31977d87bd5d5) F/DEBUG : #26 pc 0000000000204364 /data/app/~~-GRhwGB9YEWRWjJ5CYrY3w==/org.qtproject.example.heartrate_game-j6-JBYjFL9pw97qGmC379g==/base.apk (org.qtproject.qt.android.QtThread$1.run+0) F/DEBUG : #27 pc 0000000000358278 /apex/com.android.art/lib64/libart.so (artQuickToInterpreterBridge+1932) (BuildId: c35c9ebf7bb06435e4b31977d87bd5d5) F/DEBUG : #28 pc 0000000000383e98 /apex/com.android.art/lib64/libart.so (art_quick_to_interpreter_bridge+88) (BuildId: c35c9ebf7bb06435e4b31977d87bd5d5) F/DEBUG : #29 pc 0000000002004a70 /memfd:jit-cache (deleted) (offset 0x2000000) 17:45:17: Android target "org.qtproject.example.heartrate_game" died.
- is duplicated by
-
QTBUG-134211 [Reg 6.5 -> 6.8.2] Calling QCoreApplication::requestPermission() inside QQuickItem::componentComplete() causes an OpenGL crash
-
- Closed
-
- relates to
-
QTBUG-132695 Crash in QGuiApplication::applicationStateChanged() when quitting app
-
- Closed
-
-
QTBUG-139006 QtMainLoopThread crashes on x86_64 android emulator due to graphics backend initialization fail
-
- Reported
-
-
QTBUG-100991 Some tests crash on Android CI
-
- Closed
-
-
QTQAINFRA-6991 Qt Test Attack - 02, 2025
-
- Open
-
- mentioned in
-
Page Loading...