Android: release deadlock protector from requestPermissions()

Note this would ideally use androiddeadlockprotector.h, but since
it's living under the plugins directory it won't be accessible for
this code without some refactoring.

Fixes: QTBUG-133841
Pick-to: 6.5
Change-Id: I9b62e7a9809ba5e0782a82b9c07d122de544aece
Reviewed-by: Ville Voutilainen <ville.voutilainen@qt.io>
(cherry picked from commit e8aa9ff63850a6ddcac739bc773463d61ec4567f)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit b3a550d97659b7794346258a020bbea1780f259c)