src/corelib/platform/android/qandroidextras.cpp
@@ -1153,6 +1153,8 @@ requestPermissionsInternal(const QStringList &permissions)
         env->DeleteLocalRef(array);
     });
 
+    QtAndroidPrivate::releaseAndroidDeadlockProtector();
+
     return future;
 }
 
